<!-- Copyright 2018 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Room Words With Delete</string>
    <string name="action_settings">Settings</string>

    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="delete_word_preamble">Deleting </string>
    <string name="clear_data_toast_text">Clear the data now!</string>
    <string name="no_word">No word</string>
    <string name="like">like</string>
    <string name="dislike">dis</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="question_textview">Question</string>
    <string name="sign_text_view">Sign</string>
    <string name="enter_room">進入</string>
    <string name="Teacher_str">我是老師</string>
    <string name="Student_str">我是學生</string>
    <string name="class_name">課堂名稱</string>
    <string name="nick_name">暱稱</string>
    <string name="fire">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog">你好</string>
    <string name="lunch_time">午餐時間</string>
    <string name="want_to_eat">你要吃嗎</string>
    <string name="wait_a_minute">等等</string>
    <string name="i_am_hungry">我很餓</string>
    <string name="not_hungry">我不惡</string>
    <string name="gogo">走</string>
    <string name="diet">吃</string>
    <string name="ok">ok</string>
    <string name="message_room">聊天室</string>
    <string name="leave">返回</string>

</resources>
