<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <RadioGroup
        android:id="@+id/tea_std_group"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_image">

        <RadioButton
            android:id="@+id/radio_btn_teacher"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Teacher_str"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="114dp" />

        <RadioButton
            android:id="@+id/radio_btn_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Student_str"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/class_textview"
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/class_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicktextView" />

    <EditText
        android:id="@+id/class_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        app:layout_constraintStart_toEndOf="@+id/class_textview"
        app:layout_constraintTop_toBottomOf="@+id/nickname_editText"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/teacher_img"
        android:layout_width="297dp"
        android:layout_height="351dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:layout_constraintVertical_bias="0.764"
        app:srcCompat="@drawable/teacher" />

    <ImageView
        android:id="@+id/student_img"
        android:layout_width="346dp"
        android:layout_height="358dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:layout_constraintVertical_bias="0.542"
        app:srcCompat="@drawable/student" />

    <TextView
        android:id="@+id/nicktextView"
        android:layout_width="63dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nick_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/class_textview"
        app:layout_constraintTop_toBottomOf="@+id/tea_std_group" />

    <EditText
        android:id="@+id/nickname_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintStart_toEndOf="@+id/nicktextView"
        app:layout_constraintTop_toBottomOf="@+id/tea_std_group" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="332dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anyquestion_image" />

    <ImageView
        android:id="@+id/que_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/title_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/question"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="164dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:onClick="start_main"
        android:text="@string/enter_room"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_editText" />

    <ImageView
        android:id="@+id/question_mark_image"
        android:layout_width="312dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:srcCompat="@drawable/question_mark" />

</android.support.constraint.ConstraintLayout>